--- a/client/static/index.html
+++ b/client/static/index.html
@@ -23,6 +23,7 @@
     <script src="webvr-1-1.js"></script>
 
     <script src="vendor/three.min.js"></script>
+    <script src="vendor/OBJLoader.js"></script>
 
     <script src="js/app.js"></script>
 </body>
