--- a/client/static/index.html
+++ b/client/static/index.html
@@ -24,6 +24,11 @@
 
     <script src="vendor/three.min.js"></script>
     <script src="vendor/OBJLoader.js"></script>
+    
+    <!-- Shim for WebRTC -->
+    <script src="vendor/adapter.js"></script>
+    
+    <script src="/socket.io/socket.io.js"></script>
 
     <script src="js/app.js"></script>
 </body>
