Add glasses and consistent coloring

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -18,13 +18,15 @@
         <button id="reset-pose">Reset Pose</button>
     </div>
 
+    <div id="color-indicator" class="circle"></div>
+
     <script src="vendor/webvr-polyfill.js"></script>
     <!-- Shim for migration from older version of WebVR. To be removed soon. -->
     <script src="webvr-1-1.js"></script>
 
     <script src="vendor/three.min.js"></script>
     <script src="vendor/OBJLoader.js"></script>
-    
+
     <!-- Shim for WebRTC -->
     <script src="vendor/adapter.js"></script>
     
