--- a/client/static/index.html
+++ b/client/static/index.html
@@ -6,7 +6,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <title>WebVR Chat</title>
+    <title>VRSHOW: The Tank</title>
     <meta name="description" content="webvr chat room">
     <link rel="stylesheet" href="main.css">
 </head>
