--- a/client/static/index.html
+++ b/client/static/index.html
@@ -19,7 +19,11 @@
     </div>
 
     <div id="color-indicator" class="circle"></div>
-
+    
+    <div id="loading">
+        <h1>loading...</h1>
+    </div>
+    
     <script src="vendor/webvr-polyfill.js"></script>
 
     <script src="vendor/three.min.js"></script>
