Add fps status, remove camera light

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -27,6 +27,7 @@
     <script src="vendor/webvr-polyfill.js"></script>
 
     <script src="vendor/three.min.js"></script>
+    <script src="vendor/stats.min.js"></script>
     <script src="vendor/OBJLoader.js"></script>
 
     <!-- Shim for WebRTC -->
