--- a/client/static/index.html
+++ b/client/static/index.html
@@ -33,6 +33,8 @@
     <script src="vendor/stats.min.js"></script>
     <script src="vendor/OBJLoader.js"></script>
 
+    <script src="vendor/threex.daynight.js"></script>
+
     <!-- Shim for WebRTC -->
     <script src="vendor/adapter.js"></script>
     
