switch room button

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -16,6 +16,7 @@
     <div id="button-container" class="hide-for-camera">
         <button id="vr-toggle">Enter VR</button>
         <button id="reset-pose">Reset Pose</button>
+        <button id="new-room">Switch Room</button>
     </div>
 
     <div id="color-indicator" class="circle hide-for-camera"></div>
