Add webVR origin trial token

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -6,6 +6,9 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
+    <!-- Origin Trial Token, feature = WebVR, origin = https://vrs.how, expires = 2017-01-27 -->
+    <meta http-equiv="origin-trial" data-feature="WebVR" data-expires="2017-01-27" content="AjeL6lyRZOEW8P7NdEuqAdCVuCkggNkuH+8Zot7BtLi+5Y0A4V6v6IVyDCXZCwEZ4mZWuocSANPqtc6hRIRiEAEAAABZeyJvcmlnaW4iOiJodHRwczovL3Zycy5ob3c6NDQzIiwiZmVhdHVyZSI6IldlYlZSIiwiZXhwaXJ5IjoxNDg1NTM0ODgwLCJpc1N1YmRvbWFpbiI6dHJ1ZX0=">
+
     <title>VRSHOW: The Tank</title>
     <meta name="description" content="webvr chat room">
     <link rel="stylesheet" href="main.css">
